name:                Chips
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            http://adit.io
license:             BSD3
license-file:        LICENSE
author:              Aditya Bhargava
maintainer:          bluemangroupie@gmail.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

executable chips
  build-depends:       base ==4.6.*, gloss, lens, mtl, template-haskell, ActionKid, time, aeson, bytestring
  hs-source-dirs:      src
  main-is: Main.hs
  ghc-options: -rtsopts -threaded "-with-rtsopts=-M500m -N"
