name:                Chips
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            http://adit.io
license:             BSD3
license-file:        LICENSE
author:              Aditya Bhargava
maintainer:          bluemangroupie@gmail.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

executable chips
  build-depends:       base ==4.6.*,
                       gloss ==1.8.*,
                       lens ==3.9.*,
                       mtl ==2.1.*,
                       template-haskell ==2.8.*,
                       ActionKid ==0.1.*,
                       time,
                       aeson ==0.6.*,
                       bytestring ==0.10.*
  hs-source-dirs:      src
  main-is: Main.hs
  ghc-options: -rtsopts -threaded "-with-rtsopts=-M500m -N"
